[package]
name = "myersrogue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bracket-lib = "~0.8.7"
bracket-terminal = "=0.8.5"
iyes_loopless = "0.5.1"
serde = { version = "=1.0.115" }
ron = "=0.6.1"


[dependencies.bevy]
version = "0.7"
default-features = false

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.bevy]
version = "0.7"
default-features = false
features = ["dynamic"]
